--- a/muikku/src/main/webapp/resources/theme-muikku/sass/workspaces-materials-reading.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/workspaces-materials-reading.scss
@@ -459,7 +459,7 @@ body.workspace-materials-reading {
       }
       
       figure.image {
-        margin:0;
+        margin:5px;
         position:relative;
         width:auto;
         line-height:1;
@@ -497,7 +497,7 @@ body.workspace-materials-reading {
             font-family:'Open Sans', Arial, sans-serif;
             opacity:0.9;
             background:#fff;
-            padding:10px;
+            padding:15px 10px;
             font-size:13px;
             
             span.image-details-label {
@@ -540,6 +540,7 @@ body.workspace-materials-reading {
           line-height:130%;
           border-radius:2px;
           box-sizing:border-box;
+          text-align:left;
         }
         
       }
